# castep-model-generator-backend

./: .gitignore  Cargo.toml  README.md
examples/: ads_table.yaml  element_table.yaml  project.yaml
resources/: dos.param  geom.param
src/: error.rs  lib.rs  math_helper.rs  param_writer.rs  param_writer_backup.rs  test.rs
src/adsorbate/: mod.rs
src/assemble/: mod.rs
src/atom/: mod.rs
src/cell/: mod.rs
src/external_info/: adsorbate_table.rs  element_table.rs  mod.rs  project.rs
src/format/: cell.rs  mod.rs  msi.rs
src/lattice/: mod.rs
src/model_type/: cell.rs  mod.rs  msi.rs
src/molecule/: adsorbate.rs  mod.rs
src/param_writer/: castep_param.rs  mod.rs  ms_aux_files.rs  seed_writer.rs
src/parser/: mod.rs  msi_parser.rs
