[package]
name = "castep_model_generator_backend"
description = "A rust-written backend lib for edit and generation of lattice 3D-models compatible with CASTEP and Materials Studio."
readme = "README.md"
homepage = "https://github.com/TonyWu20/castep-model-generator-backend"
repository = "https://github.com/TonyWu20/castep-model-generator-backend"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = [
    "chemistry",
    "CASTEP",
    "computational_chem",
    "linear_algebra",
    "model_generator",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
nalgebra = "*"
periodic_table = "0.3.2"
periodic-table-on-an-enum = "0.3.2"
indicatif = "0"
serde_yaml = "0.8.*"
serde = { version = "*", features = ["derive"] }
rayon = "*"
glob = "0"
