[package]
name = "castep_model_generator_backend"
description = "A rust-written backend lib for edit and generation of lattice 3D-models compatible with CASTEP and Materials Studio."
readme = "README.md"
homepage = "https://github.com/TonyWu20/castep-model-generator-backend"
repository = "https://github.com/TonyWu20/castep-model-generator-backend"
version = "2.1.2"
edition = "2021"
license = "MIT"
keywords = [
    "chemistry",
    "CASTEP",
    "computational_chem",
    "linear_algebra",
    "model_generator",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version="0.*", features=["debug", "compare", "rand","macros", "alloc", "arbitrary"]}
serde_yaml = "0.8.*"
serde = { version = "1.*", features = ["derive"] }
castep-model-core = "0.2.*"
